<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register_act"
        android:orientation="vertical"
        android:background="@drawable/bg_gradient"
        android:gravity="center_horizontal"
>
    <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/edit_bg"
            android:inputType="text"
            android:drawableStart="@drawable/icon_for_textfield"
            android:hint="@string/surname_reg"

    />
    <EditText
            android:hint="@string/firstname_reg"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:background="@drawable/edit_bg"
            android:drawableStart="@drawable/icon_for_textfield"
    />
    <EditText
            android:hint="@string/middle_init_reg"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:drawableStart="@drawable/icon_for_textfield"
    />
    <EditText
            android:hint="@string/user_reg"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:drawableStart="@drawable/icon_for_textfield"
    />
    <EditText
            android:hint="@string/pass_reg"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:background="@drawable/edit_bg"
            android:drawableStart="@drawable/icon_for_textfield"
    />
    <Button
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/save_btn"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg"
    />
</LinearLayout>