<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForReg"
        android:orientation="vertical"
        android:background="@drawable/bg_gradient"
        android:gravity="center_horizontal"
>
    <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/xoros_white"
            android:contentDescription="@string/xoros_home"
    />

   <EditText
           android:id="@+id/email_id_reg"
           android:layout_width="250dp"
           android:layout_height="40dp"
           android:background="@drawable/edit_bg"
           android:layout_marginTop="20dp"
           android:hint="@string/email_address"
           android:inputType="textEmailAddress"
           android:drawableStart="@drawable/icon_for_textfield"
   />
    <EditText
            android:hint="@string/user_for_reg"
            android:id="@+id/user_reg"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_bg"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:drawableStart="@drawable/icon_for_textfield"
    />
    <EditText
            android:hint="@string/new_password"
            android:id="@+id/pass_reg"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_bg"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/icon_for_textfield"
    />
    <EditText
            android:hint="@string/confirm_password"
            android:id="@+id/cnf_pass_reg"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_bg"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/icon_for_textfield"
    />
    <Button
            android:id="@+id/btn_save"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
            android:text="@string/save_reg"
    />

</LinearLayout>