<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@drawable/bg_gradient"
        android:gravity="center_horizontal"
>
    <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/xoros_black"
            android:contentDescription="@string/xoros"
    />
    <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_bg"
            android:drawableStart="@drawable/icon_for_user"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
    ></EditText>
    <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:drawableStart="@drawable/icon_for_pass"
            android:hint="@string/password"
            android:inputType="textPassword"



    />
    <Button
            android:id="@+id/btn_login"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
            android:text="@string/login"
    />
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="9dp"
    >
        <Button
                android:id="@+id/forgot_pass_id"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:text="@string/forgot_password"
                android:textStyle="bold"
                android:background="@color/transparent"
        />
        <Button
                android:id="@+id/register_id"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:text="@string/register"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:background="@drawable/transparent_bg"
        />
    </LinearLayout>
</LinearLayout>