<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeAct"
        android:orientation="vertical"
        android:background="@drawable/bg_gradient"

>
    <Button
            android:id="@+id/btn_logout"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/logout_home"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="220dp"

    />
    <ImageView
            android:layout_width="300dp"
            android:src="@color/login_form_details_light"
            android:layout_height="350dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/result_captured"
            android:id="@+id/result_view"
            android:layout_marginStart="55dp"
    />

    <Button
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/take_picture"
            android:textColor="@color/white"
            android:id="@+id/cam_id"
            android:background="@drawable/btn_bg"
            android:layout_marginStart="110dp"
            android:layout_marginTop="40dp"
    />
    <Button
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="10dp"
            android:layout_marginStart="110dp"
    />

</LinearLayout>